Change the separator

--- a/menu.tex
+++ b/menu.tex
@@ -22,7 +22,7 @@
 	\kern0pt
 	\par
 }
-\newcommand*\separator{ $\cdot$ }
+\newcommand*\separator{\hskip.5em\relax$\bullet$\hskip.5em\relax}
 \newcommand*\drink[3]{%
 	\par
 	\textbf{#1}%
